--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,600;1,400;1,900&display=swap');
+
     *{
         padding: 0;
         margin: 0;
@@ -50,6 +51,7 @@
     }
     .buttons button{
         cursor: pointer;
+        color: #14bd30a8;
         color: white;
         width: 225px;
         height: 50px;
@@ -59,14 +61,27 @@
         font-size: large;
         font-weight: 600;
     }
-    .buttons :first-child{
-        background-color: #3F0071;
-    }
-    .buttons :last-child{
-        background-color: #aa2256;
-    }
+
     section{
-        height: 768px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        width: 100%;
         background: rgb(58,17,108);
-        background: linear-gradient(180deg, rgba(58,17,108,1) 0%, rgba(40,118,50,1) 80%, rgba(120,156,19,1) 100%);
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.75)),
+        url('images/fondo-conoce-mas.png');
+        background-repeat: no-repeat;
+        background-size: 100%;
+        background-position: 5% 5%;
+        box-sizing: border-box;
     }
+.carousel{
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    
+    justify-content: space-around;
+    
+}
