--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -25,7 +25,7 @@
         color: white;
         text-decoration: none;
     }
-    h1{
+    .titulo{
         margin: 56px 0px 40px;
         font-weight: 900;
         font-style: italic;
