--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -5,77 +5,16 @@
         margin: 0;
     }
     main{
-        
-        display: flex;
-        flex-direction: column;
-        align-items: end;
-        width: 100%;
-        height: 100vh;
-        background-repeat: no-repeat;
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.75)),
-                          url('images/fondo.png');
-        background-size: 100%;
-        background-position: center center;
-        color: white;
-        font-family: 'Poppins', sans-serif;
-        box-sizing: border-box;
-        padding: 23px;
-    }
-    a{
-        color: white;
-        text-decoration: none;
-    }
-    .titulo{
-        margin: 56px 0px 40px;
-        font-weight: 900;
-        font-style: italic;
-        display: flex;
-        justify-content: right;
-        font-size: 48px;
-    }
-    span{
-        text-align: right;
-        font-style: italic;
-        font-size: 20px;
-        font-weight: 400;
-        
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.75));
     }
     strong{
         font-style: normal;
         font-weight: 600;
     }
-    .buttons{
-        margin-top: 20px;
-        display: flex;
-        justify-content: space-around;
-    }
-    .buttons button{
-        cursor: pointer;
-        color: #14bd30a8;
-        color: white;
-        width: 225px;
-        height: 50px;
-        border: 2px rgb(165, 165, 165) solid;
-        border-radius: 10px;
-        font-family: 'Poppins', sans-serif;
-        font-size: large;
-        font-weight: 600;
-    }
+
 
     section{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        width: 100%;
-        background: rgb(58,17,108);
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.75)),
-        url('images/fondo-conoce-mas.png');
-        background-repeat: no-repeat;
-        background-size: 100%;
-        background-position: 5% 5%;
-        box-sizing: border-box;
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.75));
     }
 .carousel{
     width: 100%;
